main.css
*:focus {
  outline: none;
}
::selection {
  background: #eee;
  opacity: 1;
  color: #131313;
  padding: 10px; /* Safari */
}

body {
  background: #fff;
  color: #131313;
  overflow-x: hidden;
  font-family: sans-serif;
  padding: 0;
  margin: 0;
}

header {
  padding: 24px 48px;
  border-bottom: 1px solid #222;
}

header > a > h1 {
  margin-bottom: 10px;
}

header > h4 {
  margin-top: 10px;
}

nav {
  padding: 45px;
  float: left;
}
nav details summary {
  margin-bottom: 30px;
}
nav .site-nav section {
  line-height: 22px;
  margin-bottom: 40px;
}
nav .site-nav section h2 {
  margin: 20px 0 20px 0;
}
nav .site-nav section ul {
  margin: 0px;
  padding: 0px;
}

main {
  padding: 45px;
  float: left;
  max-width: 700px;
}
main img {
  width: 100%;
  max-width: 700px;
  margin-bottom: 15px;
}
main > * {
  max-width: 600px;
  margin-bottom: 30px;
}
main > h1 {
  font-size: 45px;
  display: none;
}
main > h2 {
  font-size: 30px;
}
main > h3 {
  font-size: 20px;
}
main > h4 {
  font-size: 35px;
}
main p {
  line-height: 25px;
  font-size: 16px;
  margin-top: 0px;
}
main > ul {
  line-height: 25px;
}

main hr {
  border: 1px;
  clear: both;
}

main img.medium {
  max-width: 300px;
}

main > q {
  font-size: 20px;
  max-width: 500px;
  display: block;
  margin-left: 30px;
}
main > pre {
  font-family: monospace;
  background: #131313;
  color: white;
  padding: 15px;
}

main .button {
  background-color: #131313;
  border: 2px solid white;
  color: white;
  padding: 13px 28px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 14px;
  border-radius: 200px;
  font-weight: bold;
  margin-right: 15px;
  margin-bottom: 30px;
}
main .button:hover {
  background-color: #333 !important;
  color: white;
}
main .button small {
  color: #131313;
}

body select {
  color: #131313;
  margin-bottom: 20px;
}
main table.drpdown {
  padding-bottom: 15px;
  font-size: 18px;
}
main table.drpdown td {
  padding-bottom: 15px;
  color: #131313;
}

.navheader {
  text-decoration: none;
}

main .shortcut,
main kbd {
  background: #fff;
  display: inline-block;
  padding: 2px 5px;
  margin: 0px;
  color: #131313;
  font-size: 12px;
  line-height: 16px;
  border-radius: 2px;
  font-weight: bold;
}
main .shortcut-list dt,
main .shortcut-list dd {
  display: inline;
  line-height: 25px;
  margin-left: 0;
  margin-right: 10px;
}

footer {
  line-height: 30px;
  clear: both;
  padding: 45px;
}
footer hr {
  margin-bottom: 15px;
}

a {
  color: #131313;
}

ul {
  margin: 0px 0px 30px 0px;
}

ul.nobull li {
  list-style-type: none;
}

@media (prefers-color-scheme: dark) {
  body {
    background: #131313;
    color: white;
  }
  body a {
    color: white;
  }
  main > pre {
    background: white;
    color: #131313;
  }
  body select {
    color: #131313;
    background-color: white;
  }
}

/* Mobile */

@media (max-width: 1100px) {
  nav {
    width: 100%;
  }
  nav .site-nav section {
    float: left;
    margin: 0 10px 10px 0;
  }
}
@media (max-width: 1100px) and (min-width: 651px) {
  nav .site-nav section {
    width: calc(25% - 10px);
  }
  nav .site-nav section:nth-child(4n + 1) {
    clear: left;
  }
}

@media (max-width: 650px) and (min-width: 501px) {
  nav .site-nav section {
    width: calc(33% - 10px);
  }
  nav .site-nav section:nth-child(3n + 1) {
    clear: left;
  }
}

@media (max-width: 500px) and (min-width: 351px) {
  nav .site-nav section {
    width: calc(50% - 10px);
  }
  nav .site-nav section:nth-child(2n + 1) {
    clear: left;
  }
}

@media (max-width: 350px) {
  nav .site-nav section {
    width: 100%;
  }
}

